tests/spec/compile-fail/048_oncefn_called_twice.zn
// category: compile-fail
// profile: freestanding
// purpose: OnceFn is consumed by its first call

module tests.fail.onceFnCalledTwice;

fn bad(move f: OnceFn<U32>) -> U32 {
    let first = f();
    let second = f(); // expected-error: OnceFn callable was consumed by the first call
    return first + second;
}
